# legacy-projects

Blyathon/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Blyathon/.github/: PULL_REQUEST_TEMPLATE.md
Blyathon/.github/ISSUE_TEMPLATE/: question.md
Blyathon/.github/workflows/: main.yaml
Blyathon/blyathon/: models.py  parser.py
Blyathon/docs/: doc.md
Feelings_bot/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __main__.py  pyproject.toml
Feelings_bot/.github/: PULL_REQUEST_TEMPLATE.md
Feelings_bot/.github/ISSUE_TEMPLATE/: question.md
Feelings_bot/docs/: doc.md
Feelings_bot/docs/examples/: example.py
Feelings_bot/feelins_bot/args/: all.py
Feelings_bot/feelins_bot/tools/: __init__.py  cute_photos.py  github_api.py  pastebin.py  relink.py
Group_bot/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Group_bot/.github/: PULL_REQUEST_TEMPLATE.md
Group_bot/.github/ISSUE_TEMPLATE/: question.md
Group_bot/app/: __main__.py  loader.py
Group_bot/app/handlers/: __init__.py
Group_bot/app/resources/: gist.py  json_pretty.py  models.py  pastebin.py  user_classes.py
Pattern-snippets/: package.json
Pattern-snippets/snippets/: snippets.json
cookie_fullkek/: cookiecutter.json
cookie_fullkek/{{ cookiecutter.project_name }}/: .gitignore
school/: .gitignore  .pre-commit-config.yaml  pyproject.toml
school/app/: __main__.py  test.py
school/app/db/: lessons.db
school/app/resources/: __init__.py  filters.py  handlers.py  loader.py  middlewares.py  models.py
